syntax = "proto3";

package contestant.v1;

option go_package = "github.com/ictsc/ictsc-regalia/backend/pkg/proto/contestant/v1;contestantv1";

message Rank {
  int64 rank = 1;
  string team_name = 2;
  int64 score = 3;
}

message GetRankingRequest {}
message GetRankingResponse {
  repeated Rank ranking = 1;
}

service RankingService {
  rpc GetRanking(GetRankingRequest) returns (GetRankingResponse);
}
